# opaq-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-30-cli-profiles.md
docs/superpowers/specs/: 2026-06-30-cli-profiles-design.md
skills/opaq/: SKILL.md
skills/opaq-docker-entrypoint/: SKILL.md
src/: help.rs  main.rs  style.rs
tests/: cli_help.rs
